refactor(EventoServiceImpl): add agnostic functions to better performance